Revert "new colors"
This reverts commit 266c1e1a9bfde8a12f18ab3c9a3c851ef9d9f4d4.

--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,14 +1,7 @@
 body {
-	background-color: #f79d8e
+	background-color: #c49a6c
 }
 
 h1, p {
-	color: #ffffff;
-	font-family: helvetica
+	color: #594a42;
 }
-
-li {
-	color: #5d5d5d;
-	font-family: helvetica
-}
-
