New colors-attempt 2

--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,7 +1,8 @@
 body {
-	background-color: #c49a6c
+	background-color: #f79d8e
 }
 
 h1, p {
-	color: #594a42;
+	color: #ffffff;
+	font-family: helvetica;
 }
