--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -7,6 +7,7 @@ main {
 	background: url(../images/macarons.jpeg); 
 	background-size: cover;
 	background-repeat: no-repeat;
+	height: 1000px;
 }
 
 body {
